--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "~4.3.1",
     "bryntum-resources": "file:./_shared",
     "bryntum-schedulerpro": "file:./build",
+    "bryntum-vue-shared": "file:./_vue_shared",
     "core-js": "~3.6.4",
     "cross-env": "^7.0.2",
     "increase-memory-limit": "^1.0.7",
